--- a/data/Blog/0000_how-mdx-powers-my-blog.mdx
+++ b/data/Blog/0000_how-mdx-powers-my-blog.mdx
@@ -1,37 +1,37 @@
 ---
-title: What really powers my blog?
+title: How MDX powers my blog?
 author: Swapnil Kumbhar
-excerpt: MDX is magic and you should be using it.
+excerpt: MDX is really awesome. You should probably try it.
 category: Technology
 subcategory: Web
-slug: how-i-built-this
+slug: how-mdx-powers-my-blog
 date: Thu Mar  3 11:51:07 AM MST 2022
 ---
 
 
 # Overview
 
-When I decided that I wanted my own space on the internet, I had two goals in mind with my setup. First, was ease (or convenience). Second, was freedom. The ability of incorporating different technologies without being tied down to one. [MDX](https://mdxjs.org) strikes this balance perfectly for me.
+When I decided that I wanted my own space on the internet, I had two goals in mind with my setup. The first was ease (or convenience) of change and creation. Second, was freedom; the ability of incorporating different technologies without being tied down to one. [MDX](https://mdxjs.org) strikes this balance perfectly for me.
 
 ## Why MDX?
 
-MDX expands upon [Markdown](https://en.wikipedia.org/wiki/Markdown) by giving the ability to use React components within Markdown. Markdown, to me, is an _extremely_ easy and fast format to write documentation. MDX strikes the balance perfectly; I can use my dynamic React components with the ease of Markdown. 
+MDX expands upon [Markdown](https://en.wikipedia.org/wiki/Markdown) by giving the ability to use React components. Markdown, to me, is an _extremely_ easy and fast format to write documentation. I often find myself taking notes in Markdown, so it is second nature for me. So that takes care of my first goal. What makes MDX special though, is that it allows me to use custom dynamic React components within Markdown, which meets my second goal.
 
 ## How do I use MDX?
 
-To do this, let's create a simple blog. Let's start with a basic TailwindCSS template. The best way to read this post is to have the code for this open in another tab or a text editor. Here's the [code](https://github.com/SwapnilKumbhar/mdxtemplate).
+To explain how I actually use MDX, let's create a simple blog. I'll start with a Nextjs+TailwindCSS template, but that's more of a preference than a requirement. The best way to follow this post is to have the code for this open in another tab or a text editor. Find the code [here](https://github.com/SwapnilKumbhar/mdxtemplate).
 
 ```sh
 $ create-next-app --typescript --use-npm --example with-tailwindcss mdxtemplate
 ```
 
-You can run this template using `npm run dev`. Keep this running in a terminal, as Next reflects every change immediately.
+You can run this template using `npm run dev`. Keep this running in a terminal, and Nextjs will reflect all our changes immediately.
 
 > This blog will assume some knowledge of NextJS, TailwindCSS and Typescript in the following section. Please refer to official documentation of these tools/frameworks for familiarity.
 
 ### Project structure
 
-Upon running the command above, you will see a bunch of files and folders that are pretty standard for a NextJS project. In addition to these, we will create a few new files and folders. Here's a list - 
+Okay! Now let's create some scaffolding for our project. In addition to the files the above command has created, we will create a few new files and folders. Here's a list - 
 
 |Path|Type|Description
 |---|---|---|
@@ -41,13 +41,15 @@ Upon running the command above, you will see a bunch of files and folders that a
 |./data/|Folder|Folder where we will store our raw `.mdx` blogs|
 |./lib/blog.ts|File|Create a folder called `lib` and then a file called `blog.ts` within it|
 
-Now, just to render our `mdx` files, we will need a few libraries. In a terminal with your project's folder open, run this command -
+To render our `mdx` files, we will need a few libraries. In a terminal with your project's folder open, run this command -
 
 ```
 npm install @next/mdx next-mdx-remote gray-matter
 ```
 
-We need the first two to render our blogs to HTML. We will use the last library to get custom metadata for each post. Every blog we write will have some metadata at the top enclosed within two `---`. This data is called `Frontmatter`. it has to be in valid YAML format for `gray-matter` to parse it. To get an idea of what you can have in this section, here's the Frontmatter for this post -
+We need the first two libraries to render MDX to HTML. We will use the last library to add some custom metadata for each post. 
+
+Every blog we write will have some metadata at the top enclosed within two `---`. This data is called `Frontmatter`. It has to be in valid YAML format for `gray-matter` to parse it. To get an idea of what you can have in this section, here's the Frontmatter for this post -
 
 ```
 title: What really powers my blog?
@@ -59,7 +61,7 @@ slug: how-i-built-this
 date: Thu Mar  3 11:51:07 AM MST 2022
 ```
 
-We will have something simpler like this -
+For our humble blog, we will have something simpler like this -
 ```
 title: Absolutely amazing MDX blogpost
 author: Mark Down
@@ -68,7 +70,7 @@ slug: mdx-rules
 
 ### Loading MDX files
 
-This is a relatively easy part of the entire process. In our `lib/blog.ts` file, we will create a few functions to read MDX files in the `./data/` directory. After reading these files, we will send them to `gray-matter` to get their metadata. Pretty simple. Here's how that looks -
+This part is relatively easy. In our `lib/blog.ts` file, we will create a few functions to read MDX files in the `./data/` directory. After reading these files, we will send them to `gray-matter` to get their metadata. Pretty simple. Here's what that looks like -
 
 ```ts
 import matter from 'gray-matter';
@@ -120,13 +122,15 @@ export const getAllPosts = async (): Promise<BlogPost[]> => {
 
 ```
 
+In the mostly commented code above, we have loaded every MDX file, parsed its Frontmatter data and saved it in an array.
+
 That's all we need for our backend! Now to the interesting part: The Frontend.
 
 ### Rendering MDX files
 
-`next-mdx-remote` gives us a method called `serialize` that compiles raw MDX to HTML. This rendered HTML is passed to `<MDXRemote />`, a component in the library. 
+`next-mdx-remote` gives us a method called `serialize` that compiles raw MDX to HTML. This rendered HTML is passed to `<MDXRemote />`, a component in the library. Now the details that follow are pretty important, and are possibly the hardest part of the project.
 
-> I'll be covering a few Nextjs specific details now. If you are not using Nextjs for this, you can skip the next two paragraphs.
+> I'll be covering a few Nextjs specific details now. While a different method can be used in a different framework, I'd urge you to read the Nextjs documentation to understand what exactly is going on in these functions.
 
 To render a specific blog page, we are using Dynamic Routing. Since we are building a static blog, we can tell the routes that will exist on the blog ahead of time. This is where the `getStaticPaths()` function comes into picture. Let's say we have three blogs with paths `/blog1`, `/blog2` and `/blog3`, we can tell Next that these are our routes. When Next will build our project, it will build these routes out of the box. Pretty neat!
 
@@ -144,7 +148,7 @@ Now we can finally write our `/posts/[slug].tsx`.
 
 First, let's build our paths and static content. If you are not using Nextjs, then just refer to the component's code in the next snippet.
 
-```ts
+```tsx
 // The context we receive here has params that we exported from getStaticPaths
 export async function getStaticProps(context: { params: { slug: string } }) {
   const posts = await getAllPosts();
@@ -227,10 +231,104 @@ export default function Page({ source, metadata }: Props) {
 }
 ```
 
+Open your browser and head over to `/posts/awesome-mdx` to see your creation!
+
 Awesome! We can now render MDX into plain HTML. If we inspect this page in our browser though, we will find that our heading is in an `<h1>` tag and our paragraph is in a `<p>` tag. They are rendered as plain old HTML. Obviously, we would want to customize this and that's what we will do now.
 
 ### Customization
 
 In the `<MDXRemote />` component, we can pass a `components` object that instructs the renderer on _how_ to render specific tags. Let's try to customize our `<h1>` and `<p>` tags. These are simple tags that just take `children` as props, but this methodology can be extended to other tags too. [example](https://github.com/SwapnilKumbhar/swapnilk.xyz/tree/main/components/MDX) from my blog. 
 
+At the top level, let's create a folder called `Components`. Within the folder, we will create two files: `Paragraph.tsx` and `Heading.tsx`.
 
+Now in each of these files, we will create the component that we want MDXRemote to render when a specific tag needs to be rendered. Let's say that we want the following customizations: 
+
+1. The `<h1>` tag should have larger text, some padding and italic
+2. The `<h2>` tag should be padded and italic.
+3. The `<p>` tag should just have some top padding
+
+I have used TailwindCSS for styling, but that is just a preference. Plain CSS would work just as well here. Here's what our files would look like - 
+
+```tsx
+/*
+ * Heading.tsx
+ * ---
+ *
+ * Contains the styling for h1 and h2 tags
+ *
+ */
+
+import { ReactNode } from 'react';
+
+// Most tags get `children` as a prop.
+type DefaultProps = {
+  children?: ReactNode
+};
+
+export function Heading1({ children }: DefaultProps) {
+  return (
+    <div className="py-2 text-3xl italic">
+      {children}
+    </div>
+  );
+}
+
+export function Heading2({ children }: DefaultProps) {
+  return (
+    <div className="py-2 italic">
+      {children}
+    </div>
+  );
+}
+
+```
+
+Paragraphs - 
+```tsx
+/*
+ * Paragraph.tsx
+ * ---
+ *
+ * Contains the styling for p tags
+ *
+ */
+
+import { ReactNode } from 'react';
+
+type DefaultProps = {
+  children?: ReactNode
+};
+
+export default function Paragraph({ children }: DefaultProps) {
+  return (
+    <div className="pt-8">
+      {children}
+    </div>
+  );
+}
+```
+
+Now, we just have to let our `MDXRemote` know that we need these components to be rendered in place of the default tags. To do this, we just add the `components` parameter and pass in our components. So in our `[slug].tsx` file, here's what we change -
+
+```tsx
+// Snip
+
+  <MDXRemote
+    {...source}
+    components={{
+      h1: Heading1,
+      h2: Heading2,
+      p: Paragraph,
+    }}
+  />
+
+// Snip
+```
+
+Great! We just customized our MDX!
+
+# Closing thoughts
+
+Without a doubt, there are _much_ simpler solutions out there for creating and managing a blog. I chose this specifically because it allows me to customize my blogs very easily and in an extensible way (I can even use custom components in MDX, but that's a topic for another day). 
+
+That being said, I hope you learned something new here! The code described here is available here. Feel free to create issues on the repository should you run into troubles.
