--- a/data/Blog/0000_how-mdx-powers-my-blog.mdx
+++ b/data/Blog/0000_how-mdx-powers-my-blog.mdx
@@ -13,11 +13,11 @@ date: Thu Mar  3 11:51:07 AM MST 2022
 
 When I decided that I wanted my own space on the internet, I had two goals in mind with my setup. The first was ease (or convenience) of change and creation. Second, was freedom; the ability of incorporating different technologies without being tied down to one. [MDX](https://mdxjs.org) strikes this balance perfectly for me.
 
-## Why MDX?
+# Why MDX?
 
 MDX expands upon [Markdown](https://en.wikipedia.org/wiki/Markdown) by giving the ability to use React components. Markdown, to me, is an _extremely_ easy and fast format to write documentation. I often find myself taking notes in Markdown, so it is second nature for me. So that takes care of my first goal. What makes MDX special though, is that it allows me to use custom dynamic React components within Markdown, which meets my second goal.
 
-## How do I use MDX?
+# How do I use MDX?
 
 To explain how I actually use MDX, let's create a simple blog. I'll start with a Nextjs+TailwindCSS template, but that's more of a preference than a requirement. The best way to follow this post is to have the code for this open in another tab or a text editor. Find the code [here](https://github.com/SwapnilKumbhar/mdxtemplate).
 
@@ -29,7 +29,7 @@ You can run this template using `npm run dev`. Keep this running in a terminal, 
 
 > This blog will assume some knowledge of NextJS, TailwindCSS and Typescript in the following section. Please refer to official documentation of these tools/frameworks for familiarity.
 
-### Project structure
+## Project structure
 
 Okay! Now let's create some scaffolding for our project. In addition to the files the above command has created, we will create a few new files and folders. Here's a list - 
 
@@ -68,7 +68,7 @@ author: Mark Down
 slug: mdx-rules
 ```
 
-### Loading MDX files
+## Loading MDX files
 
 This part is relatively easy. In our `lib/blog.ts` file, we will create a few functions to read MDX files in the `./data/` directory. After reading these files, we will send them to `gray-matter` to get their metadata. Pretty simple. Here's what that looks like -
 
@@ -124,7 +124,7 @@ In the mostly commented code above, we have loaded every MDX file, parsed its Fr
 
 That's all we need for our backend! Now to the interesting part: The Frontend.
 
-### Rendering MDX files
+## Rendering MDX files
 
 `next-mdx-remote` gives us a method called `serialize` that compiles raw MDX to HTML. This rendered HTML is passed to `<MDXRemote />`, a component in the library. Now the details that follow are pretty important, and are possibly the hardest part of the project.
 
@@ -233,7 +233,7 @@ Open your browser and head over to `/posts/awesome-mdx` to see your creation!
 
 Awesome! We can now render MDX into plain HTML. If we inspect this page in our browser though, we will find that our heading is in an `<h1>` tag and our paragraph is in a `<p>` tag. They are rendered as plain old HTML. Obviously, we would want to customize this and that's what we will do now.
 
-### Customization
+## Customization
 
 In the `<MDXRemote />` component, we can pass a `components` object that instructs the renderer on _how_ to render specific tags. Let's try to customize our `<h1>` and `<p>` tags. These are simple tags that just take `children` as props, but this methodology can be extended to other tags too. Here's an [example](https://github.com/SwapnilKumbhar/swapnilk.xyz/tree/main/components/MDX) from my blog. 
 
