fix(blog_0001): Added changes after first review
- Added the Netbanking section
- Added Google Maps
- Simplified a few sentences and fixed Grammar

--- a/data/Blog/0001_technology.mdx
+++ b/data/Blog/0001_technology.mdx
@@ -18,7 +18,7 @@ As I was teaching my mother to be more independent and enabled with technology, 
 
 ## Types of skills 
 
-I divided tech skills into three categories, each with increasing levels of complexity. Individually, each of them are relatively small and easy to conquer. Overall, it is a journey that starts from the foundations and ends at independence. If the person being taught to can teach themselves, you're done.
+I divided tech skills into three categories, each with increasing levels of complexity. Individually, each of them are relatively small and easy to conquer. Overall, it is a journey that starts from the foundations and ends at independence.
 
 1. **Basics**. The very foundations, like using a touch-screen phone, using a computer, what various concepts mean in these devices.
 2. **Essentials**. These are things that are necessary for everyday functioning. Here, we teach things like paying over UPI, Net banking, booking tickets over the internet. 
@@ -28,36 +28,57 @@ I divided tech skills into three categories, each with increasing levels of comp
 
 Let's get down to the very foundations first. While teaching technology, I ensured that my mother could do all of these things. Only then did I move to the further, more complicated topics.
 
+There's not much to Basics, as we only teach (or test) our elders' interaction with machines. 
+
 ## Interacting with devices
 
-The most basic thing that your elders should know is how to interact with the device they're using. I recommend taking extra time to ensure that they understand these concepts fully. Another thing to consider is the fact that User Interfaces are different across devices and also Operating Systems. Nevertheless, they're heavily engineered to be intuitive for all users. In the following sections, I'll describe a few litmus tests how familiar your elders are with their devices.
+The most basic thing that your elders should know is how to interact with the device they're using. I recommend taking extra time to ensure that they understand these concepts fully. Another thing to consider is the fact that User Interfaces are different across devices and also Operating Systems. Nevertheless, they're heavily engineered to be intuitive for all users. In the following sections, I'll describe a few litmus tests to check how familiar your elders are with their devices.
 
 > Keep in mind that teaching these skills requires patience. Consider the fact that unfamiliarity with User Interfaces induces discomfort and anxiety.
 
 ### Smartphones and Tablets
 
-Smartphones and Tablets are easier to use as there's only one peripheral: The screen. If your elders can unlock the phone, open applications, install new applications and type texts. These are the basics. Further, if they can read and understand what the application wants them to do, that's just an added bonus.
+Smartphones and Tablets are easier to use as there's only one peripheral: The screen. If your elders can - 
+
+1. Unlock their phones
+2. Open applications 
+3. install new applications 
+4. Send text messages 
+
+These are the basics. Further, if they can read and understand what the application wants them to do, that's just an added bonus.
 
 
 ### Desktop and Laptop Computers
 
-Things get tricky here as there are three peripherals to worry about: The keyboard, mouse/trackpad and the screen. Further, using peripherals like mouse is harder due to its unfamiliarity. I think the test described above would pretty much work here too. 
+Things get tricky here as there are three peripherals to worry about: The keyboard, mouse/trackpad and the screen. Further, using peripherals like mouse is harder due to its unfamiliarity. I think the tests described above would work here. 
 
 Opening and closing applications, being able to type into the applications is something they should be able to do fluently. These things are especially difficult if someone is familiar with another device that is starkly different, like a mobile phone. Remember to be patient when teaching these skills!
 
 # Essentials
 
-Now that we're confident that our student is familiar with actually interacting with the devices, let's jump to the important stuff. Here's where we aim to teach our elders, certain applications that make their lives simpler.
+Now that we're confident that our elders are comfortable interacting with the devices, let's jump to the important stuff. We will now aim to make our elders' lives easier by teaching them certain applications.
 
-Most of these technologies are aimed towards enabling our elders to achieve freedom: Freedom to pay for themselves, commute, etc.
+Most of these technologies are aimed towards enabling them to achieve various _freedoms_: Freedom to pay for themselves, freedom to commute, etc.
 
 ## Making payments over UPI
 
-If you are living in a fairly urban or tourist-heavy place, you'll see those little UPI QR codes at nearly every shop. Auto Rickshaws in Mumbai have it, so do street vendors and nearly everyone. UPI is also used to pay some fairly important bills too, like electricity and mobile phone bills. Teaching UPI to our elders gives them the freedom to transfer relatively small amounts of money without using cash. 
+If you are living in an urban or tourist-heavy place, you'll see those little UPI QR codes at nearly every shop. Auto Rickshaws in Mumbai have it, so do street vendors and nearly everyone. UPI is also used for paying some important bills, like electricity and mobile phone bills. Teaching UPI to our elders gives them the freedom to perform transactions without needing cash. 
 
 GooglePay and PhonePe are good applications to teach. PhonePe is a little overwhelming to look at (the homepage has _a lot_ of things), but still can be taught just fine. Create or link a UPI ID to your elders phones and then perform a few dummy transactions till they get a hang of it. It was extremely rewarding to see my mother pay for her groceries over UPI 😄. 
 
 > For non-Indian readers, UPI could be replaced by mobile Tap-and-Pay applications like Google Pay, Apple Pay etc.
+
+## Netbanking and Mobile Banking
+
+Something that's pretty common among our elders is the habit of going to the bank and getting their passbook updated. The instinct to go down to the bank for their banking is set in stone, and for good reason. Netbanking did not exist for the many years that they did their banking. 
+
+Now, however, nearly everything you'd want to get done at a bank can be done on the bank's online application. Start with tasks like checking account balance, recent transactions and then move on to money transfers. There are a lot of things to teach in online banking, so focus on teaching things that your elders need the most (ask them why they go to the bank, for starters). Also, teach them how to do these things securely. A strong password, etc. should just be a habit.
+
+## Using Google Maps
+
+If we discount social media, then my most used application is Google Maps. Apart from the usual uses like finding directions to a specific place, Google Maps is useful for a lot more things. The "near me" feature specifically is very useful. 
+
+Start by teaching the very basics of Maps, like looking for places, finding directions, looking at trip time estimates depending on modes of travel. Then, move on to things like looking for restaurants near you, medical stores near you, etc. In some areas, Maps also shows public transportation options. Be sure to teach this if available!
 
 ## Booking a cab 
 
@@ -65,7 +86,7 @@ In most major cities, cab services like Uber are pretty common. If not, there ar
 
 The goal is to help them gain confidence in doing this and also helping them overcome their fear or anxiety. I believe this is a very important skill as it gives them the freedom to commute.
 
-## Buying Public Transport tickets
+## Buying public transport tickets
 
 Of course, an Uber isn't always the most cost-effective way to travel. Public Transport is often a better way to travel, especially for longer distances. In India, Trains and Metros are a very common way to commute. When I was living in San Francisco, a Clipper card was a necessity if I wanted to take the bus or the train. 
 
@@ -85,6 +106,14 @@ To train this skill, ask them about something they want to learn or give them a 
 
 Another important detail to teach is the intuition to form questions. Say, they're reading a book and found a word that they do not know the meaning of? Ask them to think of their problem as a question. In this case, it will be "What is the meaning of languished?". This is an important skill as Googling such questions will help them find resources better!
 
+> After Google, teach these things for YouTube. YouTube also has a lot of useful information.
+
+## Using cloud services 
+
+Google Photos, Docs, Sheets and Drive are some of Google's most used cloud services. These are super useful services too: You can do your finances in Sheets, backup data on Drive. Google Photos has this amazing feature where you can search for pictures of specific objects. I often used that feature to look for pictures of receipts that I had to upload for reimbursements. 
+
+Now even for an advanced skill, using cloud services is pretty advanced. But at this point, the elders can function at nearly the same level as most of us do.
+
 ## Staying safe on the Internet
 
 The internet is a great resource. It could be an equally dangerous place if we are not careful. 
@@ -99,9 +128,9 @@ Apart from these, teach your elders the safety tricks you use yourself. If you u
 
 # Final thoughts
 
-By no means is this an exhaustive list. There are many other things that can be taught by you. But your goal isn't to teach them a set of applications or a device. The goal is to teach them to help themselves with technology. If your parent, or whoever it is that you are teaching, is able to solve their problem by Googling its solution, then your job is done.
+By no means is this an exhaustive list. There are many other things that can be taught by you. Your goal isn't to just teach them a set of applications or a device. The goal is to teach them to help themselves with technology. If your parent, or whoever it is that you are teaching, is able to solve their problem by Googling its solution, then you've accomplished your goal.
 
-I am sure my mother would soon be able to do that, and she will not need to ask my brother of I for any help with technology. The feeling of learning something new, of being self-sufficient is priceless. I am sure this will be a pretty fulfilling experience for you too. 
+I am sure my mother would soon be able to do that, and she will not need to ask my brother or I for any help with technology. The feeling of learning something new and being self-sufficient is priceless. I am sure this is going to be a pretty fulfilling experience for you, the teacher, too. 
 
 Just remember to be patient and helpful!
 
