feat(blog_0001): Final changes. Ratified.
- Changed styling on Blockquote
- Update caniuse in package-lock

--- a/data/Blog/0001_technology.mdx
+++ b/data/Blog/0001_technology.mdx
@@ -1,18 +1,18 @@
 ---
-title: "Enabling Older Adults with Technology"
+title: Enabling Older Adults with Technology
 author: Swapnil Kumbhar
 excerpt: Our elders need to learn technology, now more than ever.
 category: General
 subcategory: Technology Enablement
 slug: enabling-older-adults-with-technology
-date: Mon Jan  2 07:22:06 AM UTC 2023
+date: Wed Jan  4 06:41:14 AM UTC 2023
 ---
 
 # All you need is a smartphone
 
 ...and an Internet connection, and nearly everything is possible. In India as of today, you can pay your vegetable vendor on the street using [UPI](https://www.npci.org.in/what-we-do/upi/product-overview). You can also do things like buy a train or metro ticket online, pay your Rickshaw driver over UPI, nearly _all_ of your banking and so much more! Technological advancements have already changed the way most people go about their daily lives. 
 
-"Most people", however, often leaves out the elderly. According to a 2019 Mint [article](https://www.livemint.com/education/news/why-is-digital-literacy-important-for-elderly-1568620357404.html), 86% of elderly were "digitally illiterate" (harsh term, IMHO). The study, conducted by the [Agewell Foundation](https://www.agewellfoundation.org/?page_id=1162), defined "elderly" as people over the age of 55. Despite the study being four years old, the study's findings still hold true today.
+"Most people", however, often leaves out the elderly, or the older adults. According to a 2019 Mint [article](https://www.livemint.com/education/news/why-is-digital-literacy-important-for-elderly-1568620357404.html), 86% of elderly were "digitally illiterate" (harsh term, IMHO). The study, conducted by the [Agewell Foundation](https://www.agewellfoundation.org/?page_id=1162), defined "elderly" as people over the age of 55. Despite the study being four years old, the study's findings still hold true today.
 
 As I was teaching my mother to be more independent and enabled with technology, I decided to document the top areas that should be taught to those seeking enablement. 
 
